--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
     "dotenv": "^17.2.2",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
+    "knex": "^3.1.0",
     "pg": "^8.16.3"
   },
-  "name": "caderno_questoes",
+  "name": "reposicao",
   "version": "1.0.0",
   "main": "routes.js",
   "devDependencies": {
